<resources>
    <string name="concert">See a concert at the Charlottesville Pavilion</string>
    <string name="lighting">See the Lighting of the Lawn</string>
    <string name="cavman">High-five CavMan</string>
    <string name="sing">Sing the Good Old Song</string>
    <string name="streak">Streak the Lawn</string>
    <string name="dorm">Have a dorm reunion</string>
    <string name="BBQ">Grab some BBQ in Belmont</string>
    <string name="musiclib">Study in the Music Library</string>
    <string name="mcgregor">Read in the McGregor Room</string>
    <string name="volunteer">Volunteer in the Charlottesville community</string>
    <string name="bilt">Survive at the Biltmore</string>
    <string name="och">See a show at Old Cabell Hall</string>
    <string name="beta">Paint Beta Bridge</string>
    <string name="bluehole">Rope swing at Blue Hole</string>
    <string name="humpback">Watch the sunrise from Humpback Rock</string>
    <string name="jpj">Attend an event at JPJ</string>
    <string name="market">Visit the Farmer\'s Market Downtown</string>
    <string name="carter">Pick fruit at Carter Mountain</string>
    <string name="revisit">Revisit your first-year dorm</string>
    <string name="trickortreat">Participate in Trick-or-Treating on the Lawn</string>
    <string name="hoo">Be a crazy Hoo Crew member</string>
    <string name="poe">Visit Edgar Allan Poe\'s room</string>
    <string name="garden">Read a book in your favorite garden</string>
    <string name="football">Dress for the day at home football games</string>
    <string name="stacks">Explore Alderman stacks</string>
    <string name="declaration">See the Declaration in Special Collections</string>
    <string name="skyline">Take a drive up skyline</string>
    <string name="bus">Catch the Trolley</string>
    <string name="skate">Ice Skate Downtown</string>
    <string name="whisper">Tell a secret at the Whispering Wall</string>
    <string name="lawn">Watch the Sunrise on the Lawn</string>
    <string name="graduate">Wear the Honor of Honors</string>
    <string name="app_name">UVaBucketList</string>
    <string name="names">Ben Lee and Claire Trivisonno</string>
    <string name="course_name">CS4720</string>
    <string name="BBQ_info">Head to Belmont BBQ for something delicious to eat</string>
    <string name="toDo">To Do:</string>
    <string name="test">Test</string>
    <string name="description">Description:</string>
    <string name="status">Status:</string>

</resources>