<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0c0cb4">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="325dp"
        android:textSize="52dp"
        android:textColor="#faa30d"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize = "24dp"
        android:textColor = "#faa30d"
        android:gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:text = "@string/names"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize = "30dp"
        android:textColor = "#faa30d"
        android:gravity="center_horizontal"
        android:layout_marginBottom="44dp"
        android:text = "@string/course_name"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"/>

</RelativeLayout>